    - Added keybinds for switching between hotbar pages. By default only the number hotbar is defined as Alt-1 through
    Alt-5. The rest are left undefined.
    - You can now undefine keybinds if you don't want them by ctrl+right clicking their black box in the Keybind settings.
    - Alt + Right click now doesn't drop items that were locked..


3/9/19
    - Keybinds now include all the hotbars and the fight bars
    - Fight key binds now show the correct binding in their tooltip when you hover over the move icon
    - Trying to modify multiple key bindings don't lock you from doing other keybinds.
    - Changed the color of a keybind that overlaps vs one that overlaps but isn't set yet. Red vs Purple.
    - Water no longer renders the skybox surface, this also means lighting affects it now
    - Fixed misc bugs
    - Animals now are 5 units higher when on water tiles. Should make it easier to pick up, etc.
    - Added in a halo pointer to show where humans are pointing. There are two toggles for this in Options -> Gameplay.
    Toggle halo pointers makes them display at all times
    Toggle halo pointers on hearthing makes them display when hearthing or knocked out
    - Don't crash on resource version mismatch..

3/8/19
    - Added in KeyBind system
    - Changed profiler windows to be one window for all of them
    - Other minor fixes
    - Widgets that are no longer visible shouldn't consume mouse events or key events
    - Can now change keybinds under Options -> KeyBind settings

3/6/19
    - Added in map icons for village idol, mineholes, and ladders. Minehole can only link to ladders and vice versa.
    - Added in Option under Gameplay to halve the size of minimap icons. Also option for hiding icons all together, no55
    longer 'm' key
    - Changed map merging to localized area to avoid bad merges when two different maps exist in MCache that shouldn't
    be connected.
    - Fixed crash with queued moves and going to other maps