@@ -66,12 +66,12 @@ public class BeltWnd extends MovableWidget {
 		}
 	    });
 	    //always show our hotkey key
-	    final Coord ksz = FastText.size(key.get().replace("NumPad-", "N"));
+	    final Coord ksz = FastText.sizes(key.get().replace("NumPad-", "N"));
 	    final Coord tkeyc = sz.sub(ksz);
 	    g.chcolor(new java.awt.Color(128, 128, 128, 128));
 	    g.frect(tkeyc, new Coord(sz.x, tkeyc.y), sz, new Coord(tkeyc.x, sz.y));
 	    g.chcolor();
-	    FastText.aprint(g, sz, 1, 1, key.get().replace("NumPad-", "N"));
+	    FastText.aprints(g, sz, 1, 1, key.get().replace("NumPad-", "N"));
 	}
 
 	private void reset() {
@@ -149,9 +149,9 @@ public class BeltWnd extends MovableWidget {
 			}
 		    }
 		    dragging = false;
-		} else if(button == 1) {
+		} else if(button == 1 && c.isect(Coord.z, sz)) {
                     use();
-		} else if(button == 3) {
+		} else if(button == 3 && c.isect(Coord.z, sz) && !BeltWnd.this.locked) {
                     ui.gui.wdgmsg("setbelt", slot, 1);
 		    reset();
 		}
@@ -163,7 +163,7 @@ public class BeltWnd extends MovableWidget {
 	@Override
 	public void mousemove(Coord c) {
 	    super.mousemove(c);
-	    if(dm != null) {
+	    if(dm != null && !BeltWnd.this.locked) {
 		dragging = true;
 	    }
         }
@@ -212,9 +212,11 @@ public class BeltWnd extends MovableWidget {
     //The actual belt..
     private final String name;
     private Style style;
+    private boolean locked;
 
     private BeltBtn[] btns = new BeltBtn[10];
-    private final IButton rotate, up, down;
+    private final IButton rotate, up, down, lock;
+    private final BufferedImage on, off;
 
     //This is all about which slots we "own" and how we split it up between pages
     //each page is 10 slots
@@ -226,8 +228,6 @@ public class BeltWnd extends MovableWidget {
     //Belt data
     private final BeltData data;
 
-
-    //TODO: belts should be IndirSettings
     private BeltWnd(final String name, final BeltData data) {
         super(name);
         this.name = name;
@@ -235,6 +235,7 @@ public class BeltWnd extends MovableWidget {
         style = Style.valueOf(DefSettings.global.get("belt."+name+".style", String.class));
         visible = DefSettings.global.get("belt."+name+".show", Boolean.class);
         page = DefSettings.global.get("belt."+name+".page", Integer.class);
+        locked = DefSettings.global.get("belt."+name+".locked", Boolean.class);
 
         rotate = add(new IButton("custom/belt/default/rotate", "Rotate belt", () -> {
             switch (style) {
@@ -251,6 +252,16 @@ public class BeltWnd extends MovableWidget {
 	    DefSettings.global.set("belt."+name+".style", style.toString());
 	    reposition();
 	}));
+        lock = add(new IButton("custom/belt/default/lock", "Lock belt", () -> {
+            locked = !locked;
+            BeltWnd.this.lock.hover = locked ? BeltWnd.this.on : BeltWnd.this.off;
+            BeltWnd.this.lock.up = locked ? BeltWnd.this.off : BeltWnd.this.on;
+	}));
+        on = lock.up;
+        off = lock.hover;
+        lock.hover = locked ? on : off;
+        lock.up = locked ? off : on;
+
         up = add(new IButton("custom/belt/default/up", "Go up a page", () -> {
             page++;
             if(page >= pagecount)
@@ -367,7 +378,8 @@ public class BeltWnd extends MovableWidget {
 		y * (Inventory.invsq.sz().y + 2));
 	down.c = new Coord(x * (Inventory.invsq.sz().x + 2) + up.sz.x + 2,
 		y * (Inventory.invsq.sz().y + 2));
-	rotate.c = down.c.add(down.sz.x + 2, 0);
+	rotate.c = up.c.add(0, up.sz.y + 2);
+	lock.c = rotate.c.add(rotate.sz.x + 2, 0);
     }
 
     private void reposition() {
@@ -392,11 +404,13 @@ public class BeltWnd extends MovableWidget {
 		    up.c = new Coord(0, n);
 		    down.c = new Coord(up.sz.x + 2, n);
 		    rotate.c = up.c.add(0, up.sz.y + 2);
+		    lock.c = rotate.c.add(rotate.sz.x + 2, 0);
 		    break;
 		case HORIZONTAL:
 		    up.c = new Coord(n, 0);
 		    down.c = new Coord(n, up.sz.y + 2);
 		    rotate.c = up.c.add(up.sz.x + 2, 0);
+		    lock.c = rotate.c.add(0, rotate.sz.y + 2);
 		    break;
 	    }
 	}
